# NL2Scene3D

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: settings.toml
config/prompts/: critic_user.txt  reorder_system.txt  reorder_user.txt
scripts/: batch_pipeline.py  run_pipeline.py  test_gemini.py
src/nl2scene3d/: __init__.py  config.py  gemini_client.py  logging_setup.py  metrics.py  models.py  randomizer.py  scene_applicator.py  scene_loader.py  scene_reorganizer.py  visual_critic.py
src/nl2scene3d/blender/: __init__.py  camera_setup.py  renderer.py
tests/: __init__.py  test_blender_modules.py  test_config.py  test_gemini_client.py  test_metrics.py  test_models.py  test_randomizer.py  test_scene_applicator.py  test_scene_loader.py  test_scene_reorganizer.py  test_visual_critic.py
